--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,6 @@
 root = true
 
-[*]
+[*.{c, h}]
 indent_style = space
 indent_size = 2
 end_of_line = lf
@@ -10,3 +10,12 @@ insert_final_newline = true
 
 [*.md]
 trim_trailing_whitespace = false
+insert_final_newline = true
+end_of_line = lf
+charset = utf-8
+
+[*.{tex, bst, sty, bib}]
+trim_trailing_whitespace = false
+insert_final_newline = true
+end_of_line = lf
+charset = utf-8
